# vision-paper

./: .gitignore  bibliography.bib  sphere-detection.tex
code/: data_analysis.r  detect_invalid_bounding_boxes.py  detection_stats.py  detection_stats_multiscale.py  download_synset_images.py  download_synset_images_with_info.py  extract_object_windows.py  extract_random_windows.py  extract_test_set.py  generate_trials.py  parent_words.yaml  parent_words_background.yaml  parent_words_negative.yaml  perform_experiments.py  plot_results.py  results.csv  results.tsv  template.yaml  train_classifier.py
code/circle_detector/: CMakeLists.txt  ellipses.txt  n03208556_11942.pgm  opencv_circle_detector.cpp
code/circle_detector/elsd_1.0/: elsd  elsd.c  makefile  process_curve.c  write_svg.c
code/opencv_runner/: Adaboost.cpp  Adaboost.h  CMakeLists.txt  CascadeClassifier.cpp  CascadeClassifier.h  main.cpp
doc/: bibliography.bib  sphere-detection.tex
doc/.texpadtmp/: sphere-detection.aux  sphere-detection.bbl  sphere-detection.blg  sphere-detection.out
doc/paper/: bibliography.bib
doc/presentation/: latex-setup.tex  old-presentation.tex  references.bib  results.csv  results.xlsx  sphere-detection-presentation.tex
doc/presentation/.texpadtmp/: sphere-detection-presentation.aux  sphere-detection-presentation.bbl  sphere-detection-presentation.blg  sphere-detection-presentation.nav  sphere-detection-presentation.out  sphere-detection-presentation.snm  sphere-detection-presentation.toc
results/: table.tex
